<resources>
    <string name="app_name">Story Hub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="video_coins">view this ad to receive 20 Coins</string>
    <string name="withdraw_txt">50,000 Coin Requred to Withdrow</string>
    <string name="coin_txt">50,000 Coins to 250 INR</string>
    <string name="sign_txt">By registering you are agreeing to our Terms of use and Privacy Policy.</string>
    <string name="email">storyhub@gmail.com</string>
    <!--    layout banner ads...banner , banner 300x250-->

    <string name="banner_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_300">ca-app-pub-3940256099942544/6300978111</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="privacytxt">Story Hub built the story Hub app as an Ad Supported app. This SERVICE is provided by Story Hub at no cost and is intended for use as is.</string>
     <string name="privacytxt1">This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</string>
     <string name="privacytxt2">If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.
        The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at story Hub unless otherwise defined in this Privacy Policy.</string>
    <string name="privacytxt3">For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information. The information that we request will be retained by us and used as described in this privacy policy.
        The app does use third-party services that may collect information used to identify you.
        Link to the privacy policy of third-party service providers used by the app</string>
    <string name="contactus">If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at storyhub@gmail.com.</string>

    <string name="terms1">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages or make derivative versions. The app itself, and all the trademarks, copyright, database rights, and other intellectual property rights related to it, still belong to Story Hub.</string>
    <string name="terms2">Story Hub is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.</string>
    <string name="terms3">The story Hub app stores and processes personal data that you have provided to us, to provide our Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the story Hub app won’t work properly or at all.</string>
    <string name="about_info">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>